Fixed image bug on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,7 @@ input[type="search"]::-webkit-search-cancel-button {
     backface-visibility: hidden;
     /* border-radius: 4px; */
     aspect-ratio: 1;
+    height: fit-content;
   }
 
   & > :nth-child(2) {
